Cambios de prueba con docker que no funcionaron